[gd_scene load_steps=7 format=3 uid="uid://djix66bbpxuh1"]

[ext_resource type="Script" path="res://Maps/card_combat.gd" id="1_oxykd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vt4hq"]
size = Vector2(60, 60)

[sub_resource type="LabelSettings" id="LabelSettings_l2pd5"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_fmdvx"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_xf1t1"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_vckmo"]
font_size = 10

[node name="CardCombat" type="Node2D"]
script = ExtResource("1_oxykd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vt4hq")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AttackLabel" type="Label" parent="."]
offset_left = -36.0
offset_top = 28.0
offset_right = 4.0
offset_bottom = 51.0
text = "1	"
label_settings = SubResource("LabelSettings_l2pd5")

[node name="HealthLabel" type="Label" parent="."]
offset_left = 31.0
offset_top = 28.0
offset_right = 71.0
offset_bottom = 51.0
text = "1"
label_settings = SubResource("LabelSettings_fmdvx")

[node name="LevelLabel" type="Label" parent="."]
offset_left = -3.0
offset_top = -43.0
offset_right = 37.0
offset_bottom = -20.0
text = "1"
label_settings = SubResource("LabelSettings_xf1t1")

[node name="NameLabel" type="Label" parent="."]
offset_left = -7.0
offset_top = 32.0
offset_right = 33.0
offset_bottom = 55.0
text = "rat
"
label_settings = SubResource("LabelSettings_vckmo")
